@@ -3,6 +3,8 @@
 * Add tables argument to ModelSQL.search_domain
 * Rename ir.module.module* into ir.module*
 
+* Only return default record if no domain supplied on ModelSingleton search
+
 Version 3.6.0 - 2015-04-20
 * Bug fixes (see mercurial logs for details)
 * Use bytes and bytearray for Binary
